add sqlite dev to github actions environment

--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           ruby-version: 2.6.x
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get install libsqlite3-dev
+
       - name: Bundle
         run: |
           gem install bundler
