--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set up Ruby 3,2
-        uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2.x
+          ruby-version: '3.2'
+          bundler-cache: true
 
       - name: Install system dependencies
         run: |
