--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ jobs:
           - "2.7"
           - "3.0"
           - "3.1"
-          - "3.2"
     steps:
       - name: Install system dependencies
         run: |
@@ -23,9 +22,9 @@ jobs:
           ruby-version: ${{ matrix.ruby_version }}
           bundler-cache: true
       - name: Install dependencies
-        run: bundle install
+        run: bundle install && bundle exec appraisal install
       - name: Run Tests
-        run: bundle exec rspec
+        run: bundle exec appraisal rspec
 
   release-please:
     name: Release Please
@@ -50,7 +49,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2
+          ruby-version: 3.1
       - name: Build Gem
         run: gem build *.gemspec
       - name: Setup credentials
